// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthenticatedApp > render > Should render MainScreen 1`] = `
<div>
  <div
    id="authenticated-app container text-center"
  >
    <div
      data-testid="MainScreenMock"
    />
  </div>
</div>
`;

exports[`AuthenticatedApp > render > Should render with LoadingRipple 1`] = `
<div>
  <div
    id="authenticated-app container text-center"
  >
    <div
      class="col display-6 text-center full-pg"
    >
      <div />
      <div>
        <div
          class="loading-ripple"
        >
          <div />
          <div />
        </div>
        <br />
        Loading...
      </div>
      <div />
    </div>
  </div>
</div>
`;
